# Practica

./: skills-lock.json
server5K-fork/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
server5K-fork/app/: __init__.py  admin.py  apps.py  signals.py
server5K-fork/app/auth/: __init__.py  authentication.py
server5K-fork/app/config/: __init__.py  routing.py  ui_urls.py  urls.py
server5K-fork/app/migrations/: 0001_initial.py  0002_juez_multiple_equipos.py  0003_remove_competencia_category_equipo_category.py  0004_auditoriaregistro_competencia_token_and_more.py  0005_juez_user.py
server5K-fork/app/models/: __init__.py  auditoria.py  competencia.py  equipo.py  juez.py  registrotiempo.py
server5K-fork/app/serializers/: __init__.py  serializers.py
server5K-fork/app/services/: __init__.py  competencia_service.py  registro_service.py  results_service.py  validacion_service.py
server5K-fork/app/templatetags/: time_filters.py
server5K-fork/app/tests/: __init__.py  tests.py
server5K-fork/app/utils/: __init__.py  idempotency.py  timestamps.py
server5K-fork/app/views/: __init__.py  admin_views.py  auth_views.py  competencia_views.py  equipo_views.py  html_views.py  registro_views.py
server5K-fork/app/websocket/: __init__.py  consumers.py  routing.py  validators.py
server5K-fork/docs/adr/: 001-token-competencia-api-key.md  002-extension-registrotiempo.md
server5K-fork/server/: asgi.py  settings.py  urls.py
server5K-fork/static/css/: animations.css  (+2 more)
server5K-fork/templates/: base.html
(+28 files in other folders)
